# CUHKSZ-CSC4005

./: .gitignore
project1/: Project1-PartA-Results.txt  Project1-PartB-Results.txt  Project1-PartC-Results.txt  Project1-PartC-pics.txt  report.md
project1/src/cpu/: CMakeLists.txt  mpi_PartC.cpp  openmp_PartB.cpp  openmp_PartC.cpp  pthread_PartC.cpp  simd_PartC.cpp
project1/src/gpu/: CMakeLists.txt  cuda_PartC.cu  openacc_PartC.cpp  triton_PartC.py
project1/src/scripts/: sbatch_PartA.sh  sbatch_PartC.sh  sbatch_PartC_pic.sh
project2/: Project2-Results.txt  Report.md
project2/profiling/: Project2-Results_Perf.txt  Project2-Results_Perf_2k.txt
project2/src/: generate_matrix.py  locality.cpp  mpi.cpp  openmp.cpp  sbach_perf.sh  simd.cpp
project2/src/gpu/: CMakeLists.txt  cuda.cu
project2/src_sparse/: CMakeLists.txt  parallelized.cpp
sample_programs/: cuda_hello  mpi_hello  openacc_parallel  pthread_hello
